# OpenAgentHarness

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  README.md  README.zh-CN.md  ROADMAP-OAP.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.local.yml  mkdocs.yml  package.json  pnpm-lock.yaml  refine_with_rust.md  server.example.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
deploy/: kustomization.yaml
docs/: README.md  agent-spec.md  api-design.en.md  api-design.md  architecture-overview.en.md  architecture-overview.md  concept-relationships.md  debug-cli-tui.en.md  debug-cli-tui.md  deploy.en.md  deploy.md  design-overview.en.md  design-overview.md  domain-model.md  getting-started.en.md  getting-started.md  home-and-deploy-root.md  implementation-roadmap.md  index.en.md  index.md  k8s-compose-reuse-matrix.md  project-roadmap.en.md  project-roadmap.md  runtime-design.md  server-config.en.md  server-config.md  storage-design.md  terminology.en.md  terminology.md  tui.en.md  tui.md  workspace-spec.md
native/oah-workspace-sync/: Cargo.toml
native/oah-workspace-sync/src/: main.rs  sync_bundle.rs
runtimes/: README.md
scripts/: bench-object-storage-sync.ts  bench-runtime-materialize.ts  bench-workspace-mainline-docker.sh  bench-workspace-mainline.ts  build-native.mjs  dev-runtime.mjs  install-local-release.sh  install.sh  local-stack.mjs  storage-sync.mjs
tests/: bootstrap-platform-agents.test.ts  bootstrap-remote-sandbox.test.ts  bootstrap-runtime-mode.test.ts  bootstrap-single-workspace.test.ts  http.test.ts  (+41 more)
(+244 files in other folders)
