[package]
name = "oah-workspace-sync"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws-credential-types = "1.2.8"
aws-sdk-s3 = "1.95.0"
clap = { version = "4.5.39", features = ["derive"] }
filetime = "0.2.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["fs", "io-util", "rt-multi-thread"] }
